--- a/app/src/main/res/layout/activity_new_alarm.xml
+++ b/app/src/main/res/layout/activity_new_alarm.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     >
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
+    <ScrollView android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fillViewport="true"
                 android:orientation="vertical"
